--- a/1button.css/dutton.less
+++ b/1button.css/dutton.less
@@ -101,3 +101,29 @@
     }
 }
 //===================================================================||
+
+//===================================================================||
+
+
+
+.pagination {
+    width: 1170px;
+    // position: absolute;
+    text-align: center;
+    bottom: 19px;
+    outline: 1px solid #212121;// block visibility
+}
+.circle {
+    width: 30px;
+    height: 30px;
+    display: inline-block;
+    background-color: #c7c7c7;
+    border-radius: 50%;
+    margin: 5px;
+}
+.circle-active {
+    width: 40px;
+    height: 40px;
+    background-color: #212121;
+    margin-bottom: 0px;
+}
