--- a/1button.css/dutton.css
+++ b/1button.css/dutton.css
@@ -15,8 +15,9 @@
   color: #212121;
 }
 .btn-white .arrow-black {
+  margin-bottom: -3px;
   width: 9px;
-  height: 12px;
+  height: 19px;
   background-color: #ffff;
 }
 .btn-red {
@@ -52,8 +53,9 @@
   color: #212121;
 }
 .btn-explore-all .arrow-black {
+  margin-bottom: -2px;
   width: 9px;
-  height: 12px;
+  height: 19px;
   background-color: #ffff;
 }
 .btn-circle {
@@ -65,17 +67,17 @@
   display: block;
 }
 .btn-circle .arrow-black {
-  width: 9px;
-  height: 12px;
-  margin-top: 11px;
-  margin-left: 19px;
+  width: 12px;
+  height: 15px;
+  margin-top: 17px;
+  margin-left: 6px;
   background-color: #ffff;
 }
 .pagination {
   width: 1170px;
+  position: absolute;
   text-align: center;
   bottom: 19px;
-  outline: 1px solid #212121;
 }
 .circle {
   width: 30px;
