меняли кнопки и очень много мелких дороботок. так же структуру файлов scc стили разнесены на компоненты и линками заведены но html-структурам

--- a/home-page/home-page.css
+++ b/home-page/home-page.css
@@ -1,3 +1,4 @@
+
 .trending-products-price-range {
   width: 1366px;
   height: 70px;
@@ -53,7 +54,7 @@
   font-family: Montserrat;
   font-size: 36px;
   font-weight: 700;
-  display: inline-block;
+  /* display: inline-block; */
   float: left;
   margin-top: -3px;
   margin-left: 130px;
@@ -98,30 +99,10 @@
   margin-right: 17px;
   margin-left: 9px;
 }
-.trending-products-red-button {
-  font-size: 22px;
-  font-weight: 700;
-  text-transform: uppercase;
-  box-shadow: 0 2px 5px 1px rgba(33, 33, 33, 0.35);
-  border-radius: 35px;
-  width: 510px;
-  height: 71px;
-  line-height: 71px;
-  text-align: center;
-  display: inline-block;
-  text-decoration: none;
-  letter-spacing: 3.6px;
-  background-color: #f44336;
-  color: #ffff;
+.btn-red-location {
   margin-top: 16px;
 }
-.trending-products-red-button > img {
-  width: 29px;
-  height: 21px;
-  margin-bottom: -2px;
-}
-.trending-products-red-button + p {
-  /* Style for "The majest" */
+.btn-red + p {
   margin-top: 49px;
   color: #212121;
   font-family: Montserrat;
@@ -130,6 +111,11 @@
   line-height: 20.01px;
   letter-spacing: 0.4px;
 }
+.btn-explore-all-location {
+  margin-left: 980px;
+  margin-top: -36px;
+}
+
 .trending-products-controll {
   width: 221px;
   height: 70px;
