--- a/our-products-range/our-products-range.css
+++ b/our-products-range/our-products-range.css
@@ -32,7 +32,6 @@
 .body-menu {
     float: left;
     list-style-type: none;
-    display: inline-block;
     margin-left: -9px;
     padding-bottom: 50px;
 }
@@ -51,8 +50,8 @@
     margin-left: 10px;
 }
 .active-body-menu {
-color: #212121;
-letter-spacing: 1.8px;
+    color: #212121;
+    letter-spacing: 1.8px;
 
 }
 .active-body-menu > a {
@@ -73,8 +72,7 @@ letter-spacing: 1.8px;
 }
 /* ---------- products ------------ */
 .body-our-item-center {
-    padding-left: 25px;
-    padding-right: 26px;
+    margin: 0px 25px;
 }
 .body-our-items {
     float: right;
@@ -82,3 +80,8 @@ letter-spacing: 1.8px;
     width: 1170px;
 }
 /* ------------------------------- */
+.btn-white-our-products-location {
+    margin-top: 34px;
+    margin-left: 50px;
+    float: left;
+}
